--- a/day6-fs2/教学目标-笔记.md
+++ b/day6-fs2/教学目标-笔记.md
@@ -3,10 +3,11 @@
 
 1. fs 大文件读取
 
+2. 提交calss
+
 但是对于上M的文件，node.js的fs.readFiles是扛不住的，会报错，因为v8引擎的内存是有限制的，readFiles会一下子把整个文件加载进内存里面来，当然会越界。
 
-fs.ReadStream，我们一块块（默认64k,可以自己设置，具体参考官方文档）读取文件数据，内存就不会爆掉。
-
+我们一块块（默认64k,可以自己设置，具体参考官方文档）读取文件数据，内存就不会爆掉。
 
 nodejs中一般读取或写入时用的是fs.readFile()或fs.writeFile()。但是在读取或写入大文件时，因为文件过大不能一次性读完或写完 ，那么就引入了流的概念（Stream）。
 
