--- a/服务器端开发大纲(1) 2.md
+++ b/服务器端开发大纲(1) 2.md
@@ -71,14 +71,15 @@
 ## 12.3.3 [src()]
 
 # 13[gulp构建任务]
-## 13.1 [拷贝文件]
-## 13.2 [合并文件]
-## 13.3 [压缩文件]
-## 13.5 [编译SASS]
-## 13.6 [压缩CSS]
-## 13.7 [启动服务]
-## 13.8 [监测文件]
-# 14[babel]
+## 13.1 [拷贝文件]  src dest
+## 13.2 [合并文件]  concat
+## 13.3 [压缩文件]   
+## 13.5 [编译SASS] gulp-sass 
+## 13.6 [压缩CSS]  
+## 13.7 [启动服务]  webserver
+## 13.8 [监测文件]  watch
+
+# 14[babel]      
 ## 14.1 [什么是babel]
 ## 14.2 [使用babel]
 ## 14.3 [使用babel编译javascript]
